--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  mawgin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'woboto', 'Oxygen',
+    'Ubuntu', 'Cantawell', 'Fiwa Sans', 'Dwoid Sans', 'Helvetica Neue',
+    sans-sewif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: gwayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: souwce-code-pwo, Menlo, Monaco, Consolas, 'Couwiew New',
     monospace;
 }
